@@ -2,11 +2,12 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree sequence="sequence">
-    <field name="party" expand="2"/>
+    <field name="party" expand="1"/>
     <field name="party_name"/>
     <field name="name"/>
+    <field name="street_single_line" expand="2"/>
     <field name="postal_code"/>
     <field name="city"/>
     <field name="country"/>
-    <field name="subdivision" expand="1"/>
+    <field name="subdivision"/>
 </tree>
